--- a/package.json
+++ b/package.json
@@ -1,11 +1,30 @@
 {
   "name": "@ywalter/tiny",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "src/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:yangkunxiao/tiny.git"
+  },
+  "homepage": "https://github.com/yangkunxiao/tiny/tree/master#readme",
+  "bugs": {
+    "url": "https://github.com/yangkunxiao/tiny/issues",
+    "email": "yangkunxiao@duiba.com.cn"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "yangkunxiao@duiba.com.cn",
   "license": "ISC",
-  "description": "a tiny packages"
+  "description": "a tiny packages",
+  "keywords": [
+    "tiny",
+    "npm",
+    "packages"
+  ],
+  "files": [
+    "lib",
+    "src",
+    "README"
+  ]
 }
